# PassPix

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cd.yml  ci.yml
docs/superpowers/plans/: 2026-07-21-passpix-quality-improvement-plan.md
docs/superpowers/specs/: 2026-07-21-passpix-quality-improvement-design.md
src/: crypto_utils.cpp  crypto_utils.h  image_gen.cpp  image_gen.h  image_utils.cpp  image_utils.h  main.cpp  stego.cpp  stego.h
test/: Makefile  smoke_test.sh  test_crypto.cpp  test_stego.cpp
